main: don't instruct terminal to ignore mode changes on deactivate

This prevents plymouthd from changing VTs if necessary.

http://bugs.freedesktop.org/show_bug.cgi?id=66824